manifests/scots-lab/apps/immich/_bootstrap.yaml
apiVersion: v1
kind: Namespace
metadata:
  labels:
    pod-security.kubernetes.io/audit: baseline
    pod-security.kubernetes.io/enforce: baseline
    pod-security.kubernetes.io/warn: baseline
  name: immich
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app.kubernetes.io/instance: immich
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/name: machine-learning
    app.kubernetes.io/service: immich-machine-learning
    app.kubernetes.io/version: v2.6.3
    helm.sh/chart: immich-0.11.1
  name: immich-machine-learning
  namespace: immich
spec:
  ports:
  - name: http
    port: 3003
    protocol: TCP
    targetPort: http
  selector:
    app.kubernetes.io/controller: main
    app.kubernetes.io/instance: immich
    app.kubernetes.io/name: machine-learning
  type: ClusterIP
---
apiVersion: v1
kind: Service
metadata:
  name: immich-postgres
  namespace: immich
spec:
  ports:
  - port: 5432
  selector:
    app: immich-postgres
---
apiVersion: v1
kind: Service
metadata:
  name: immich-redis-master
  namespace: immich
spec:
  ports:
  - port: 6379
  selector:
    app: immich-redis
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app.kubernetes.io/instance: immich
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/name: server
    app.kubernetes.io/service: immich-server
    app.kubernetes.io/version: v2.6.3
    helm.sh/chart: immich-0.11.1
  name: immich-server
  namespace: immich
spec:
  ports:
  - appProtocol: kubernetes.io/ws
    name: http
    port: 2283
    protocol: TCP
    targetPort: http
  selector:
    app.kubernetes.io/controller: main
    app.kubernetes.io/instance: immich
    app.kubernetes.io/name: server
  type: ClusterIP
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app.kubernetes.io/controller: main
    app.kubernetes.io/instance: immich
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/name: machine-learning
    app.kubernetes.io/version: v2.6.3
    helm.sh/chart: immich-0.11.1
  name: immich-machine-learning
  namespace: immich
spec:
  replicas: 1
  revisionHistoryLimit: 3
  selector:
    matchLabels:
      app.kubernetes.io/controller: main
      app.kubernetes.io/instance: immich
      app.kubernetes.io/name: machine-learning
  strategy:
    type: RollingUpdate
  template:
    metadata:
      labels:
        app.kubernetes.io/controller: main
        app.kubernetes.io/instance: immich
        app.kubernetes.io/name: machine-learning
    spec:
      automountServiceAccountToken: true
      containers:
      - env:
        - name: DB_DATABASE_NAME
          value: immich
        - name: DB_HOSTNAME
          value: immich-postgres
        - name: DB_PASSWORD
          value: immich
        - name: DB_URL
          value: postgresql://immich:immich@immich-postgres:5432/immich?sslmode=disable
        - name: DB_USERNAME
          value: immich
        - name: HF_XET_CACHE
          value: /cache/huggingface-xet
        - name: IMMICH_IGNORE_MOUNT_CHECK_ERRORS
          value: "true"
        - name: IMMICH_MACHINE_LEARNING_URL
          value: http://immich-machine-learning:3003
        - name: MPLCONFIGDIR
          value: /cache/matplotlib-config
        - name: REDIS_HOSTNAME
          value: immich-redis-master
        - name: TRANSFORMERS_CACHE
          value: /cache
        image: ghcr.io/immich-app/immich-machine-learning:v2.6.3
        imagePullPolicy: IfNotPresent
        livenessProbe:
          failureThreshold: 3
          httpGet:
            path: /ping
            port: http
          initialDelaySeconds: 0
          periodSeconds: 10
          timeoutSeconds: 1
        name: main
        ports:
        - containerPort: 3003
          name: http
          protocol: TCP
        readinessProbe:
          failureThreshold: 3
          httpGet:
            path: /ping
            port: http
          initialDelaySeconds: 0
          periodSeconds: 10
          timeoutSeconds: 1
        startupProbe:
          failureThreshold: 60
          httpGet:
            path: /ping
            port: http
          initialDelaySeconds: 0
          periodSeconds: 10
          timeoutSeconds: 1
        volumeMounts:
        - mountPath: /cache
          name: cache
      dnsPolicy: ClusterFirst
      enableServiceLinks: false
      hostIPC: false
      hostNetwork: false
      hostPID: false
      serviceAccountName: default
      volumes:
      - emptyDir: {}
        name: cache
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: immich-redis-master
  namespace: immich
spec:
  replicas: 1
  selector:
    matchLabels:
      app: immich-redis
  template:
    metadata:
      labels:
        app: immich-redis
    spec:
      containers:
      - image: docker.io/redis:7-alpine
        name: redis
        ports:
        - containerPort: 6379
        resources:
          limits:
            cpu: 250m
            memory: 128Mi
          requests:
            cpu: 10m
            memory: 32Mi
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app.kubernetes.io/controller: main
    app.kubernetes.io/instance: immich
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/name: server
    app.kubernetes.io/version: v2.6.3
    helm.sh/chart: immich-0.11.1
  name: immich-server
  namespace: immich
spec:
  replicas: 1
  revisionHistoryLimit: 3
  selector:
    matchLabels:
      app.kubernetes.io/controller: main
      app.kubernetes.io/instance: immich
      app.kubernetes.io/name: server
  strategy:
    type: RollingUpdate
  template:
    metadata:
      labels:
        app.kubernetes.io/controller: main
        app.kubernetes.io/instance: immich
        app.kubernetes.io/name: server
    spec:
      automountServiceAccountToken: true
      containers:
      - env:
        - name: DB_DATABASE_NAME
          value: immich
        - name: DB_HOSTNAME
          value: immich-postgres
        - name: DB_PASSWORD
          value: immich
        - name: DB_URL
          value: postgresql://immich:immich@immich-postgres:5432/immich?sslmode=disable
        - name: DB_USERNAME
          value: immich
        - name: IMMICH_IGNORE_MOUNT_CHECK_ERRORS
          value: "true"
        - name: IMMICH_MACHINE_LEARNING_URL
          value: http://immich-machine-learning:3003
        - name: REDIS_HOSTNAME
          value: immich-redis-master
        image: ghcr.io/immich-app/immich-server:v2.6.3
        imagePullPolicy: IfNotPresent
        livenessProbe:
          failureThreshold: 3
          httpGet:
            path: /api/server/ping
            port: http
          initialDelaySeconds: 0
          periodSeconds: 10
          timeoutSeconds: 1
        name: main
        ports:
        - containerPort: 2283
          name: http
          protocol: TCP
        readinessProbe:
          failureThreshold: 3
          httpGet:
            path: /api/server/ping
            port: http
          initialDelaySeconds: 0
          periodSeconds: 10
          timeoutSeconds: 1
        startupProbe:
          failureThreshold: 30
          httpGet:
            path: /api/server/ping
            port: http
          initialDelaySeconds: 0
          periodSeconds: 10
          timeoutSeconds: 1
        volumeMounts:
        - mountPath: /data
          name: data
      dnsPolicy: ClusterFirst
      enableServiceLinks: false
      hostIPC: false
      hostNetwork: false
      hostPID: false
      serviceAccountName: default
      volumes:
      - name: data
        persistentVolumeClaim:
          claimName: immich-library-pvc
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: immich-postgres
  namespace: immich
spec:
  replicas: 1
  selector:
    matchLabels:
      app: immich-postgres
  serviceName: immich-postgres
  template:
    metadata:
      labels:
        app: immich-postgres
    spec:
      containers:
      - env:
        - name: POSTGRES_PASSWORD
          value: immich
        - name: POSTGRES_USER
          value: immich
        - name: POSTGRES_DB
          value: immich
        - name: POSTGRES_INITDB_ARGS
          value: --data-checksums
        - name: PGDATA
          value: /var/lib/postgresql/data/pgdata
        image: tensorchord/pgvecto-rs:pg14-v0.2.0@sha256:90724186f0a3517cf6914295b5ab410db9ce23190a2d9d0b9dd6463e3fa298f0
        name: postgres
        volumeMounts:
        - mountPath: /var/lib/postgresql/data
          name: postgres-data
      volumes:
      - name: postgres-data
        persistentVolumeClaim:
          claimName: immich-postgres-pvc
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: immich
  namespace: immich
spec:
  hostnames:
  - media.srbii.com
  parentRefs:
  - name: kgateway-http
    namespace: kgateway-system
  rules:
  - backendRefs:
    - name: immich-server
      port: 2283
    filters:
    - requestHeaderModifier:
        set:
        - name: X-Forwarded-Proto
          value: https
      type: RequestHeaderModifier
    matches:
    - path:
        type: PathPrefix
        value: /
